k8s/common-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: az-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp($|/)(.*)
            backend:
              serviceName: aes-ambassador
              servicePort: 80
